<resources>
    <string name="app_name">ExampleWidgets</string>
    <string name="kotlin_widgets">Kotlin Widgets!</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="onclick_in_xml">onClick in XML</string>
    <string name="onclicklistener_in_kotlin">onClickListener in kotlin</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="white">Default</string>
    <string name="football">Football</string>
    <string name="hockey">Hockey</string>
    <string name="press_me">Press Me</string>
    <string name="press_me2">Press Me</string>
    <string name="start">Start</string>
    <string name="text_you_can_type_n_nfiorentina_inter_milan_ajax_barcelona_real_madrid_chelsea_manchester_united_manchester_city_fc_shakhtar_dynamo_borussia">Text you can type \n\nFiorentina, Inter, Milan, Ajax, Barcelona, Real Madrid, Chelsea, Manchester United, Manchester City, FC Shakhtar, Dynamo, Borussia</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="text_switcher_example">Text Switcher Example</string>
    <string name="enter_team_s_name">Enter team\'s name</string>
    <string name="checkbox">Checkbox</string>
    <string name="hockey1">Hockey</string>
    <string name="football1">Football</string>
    <string name="submit">Submit</string>
</resources>